Fix comments section before element on mobile view

--- a/client/src/components/Comments/CommentSection/CommentSection.module.css
+++ b/client/src/components/Comments/CommentSection/CommentSection.module.css
@@ -25,3 +25,8 @@
     margin-bottom: 1em;
 }
 
+@media (max-width: 600px) {
+    .container::before {
+        top: -25px;
+    }
+}
